criado contexto, modelos. adicionado controller e views por scaffold.

--- a/NovoBackEnd/NovoBackEnd/NovoBackEnd.csproj
+++ b/NovoBackEnd/NovoBackEnd/NovoBackEnd.csproj
@@ -148,10 +148,14 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\DadosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Contexto\MeuNovoContexto.cs" />
+    <Compile Include="Models\Dados.cs" />
+    <Compile Include="Models\TipoModelo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -191,10 +195,14 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Dados\Create.cshtml" />
+    <Content Include="Views\Dados\Delete.cshtml" />
+    <Content Include="Views\Dados\Details.cshtml" />
+    <Content Include="Views\Dados\Edit.cshtml" />
+    <Content Include="Views\Dados\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
